--- a/src/app/containers/home-page/home-page.component.html
+++ b/src/app/containers/home-page/home-page.component.html
@@ -1,1 +1,4 @@
-<app-episode-list [episodes]="episodes$ | async"></app-episode-list>
+<!-- <app-episode-list [episodes]="episodes$ | async"></app-episode-list> -->
+
+
+<app-show-list [shows]="shows$ | async"></app-show-list>
