route guard, cast / show data + pages

--- a/src/app/containers/home-page/home-page.component.html
+++ b/src/app/containers/home-page/home-page.component.html
@@ -1,4 +1,2 @@
-<!-- <app-episode-list [episodes]="episodes$ | async"></app-episode-list> -->
-
-
+<app-date-input></app-date-input>
 <app-show-list [shows]="shows$ | async"></app-show-list>
