--- a/src/app/containers/show-page/show-page.component.html
+++ b/src/app/containers/show-page/show-page.component.html
@@ -1,3 +1,4 @@
-<p>
-  show-page works!
-</p>
+<h1></h1>
+<pre>{{show$ | async | json}}</pre>
+
+<app-cast-list [castMembers]="castMembers$ | async"></app-cast-list>
