--- a/src/app/components/show-list/show-list.component.html
+++ b/src/app/components/show-list/show-list.component.html
@@ -1,3 +1,8 @@
-<div *ngFor="let show of shows">
-    <app-show-list-item [show]="show"></app-show-list-item>
+<div fxLayout="row wrap">
+    <div *ngFor="let show of shows"
+        fxFlex="0 1 16.66%"
+        fxFlex.sm="0 1 25%"
+        fxFlex.xs="0 1 50%">
+        <app-show-list-item [show]="show"></app-show-list-item>
+    </div>
 </div>
