--- a/src/app/components/date-input/date-input.component.html
+++ b/src/app/components/date-input/date-input.component.html
@@ -1,3 +1,3 @@
-<button (click)="incrementDay(-1)">Prev</button>
+<button (click)="incrementWeek(-1)">Prev</button>
 <span>{{dateString$ | async}}</span>
-<button (click)="incrementDay(1)">Next</button>
+<button (click)="incrementWeek(1)">Next</button>
