--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -11,7 +11,7 @@
                 {{entry.show.name}} &mdash; {{entry.episode.name}}
             </mat-list-item>
         </mat-list>
-        <div class="mat-body-2">{{watchTime$ | async}}</div>
+        <div class="mat-body-2">{{(watchTime$ | async) | duration}}</div>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet></router-outlet>
