--- a/src/app/containers/app/app.component.scss
+++ b/src/app/containers/app/app.component.scss
@@ -1,8 +1,8 @@
 mat-sidenav {
-    width: 240px;
+    width: 320px;
 }
 
-.example-container {
+.container {
     position: absolute;
     top: 60px;
     bottom: 0px;
@@ -10,21 +10,21 @@ mat-sidenav {
     right: 0;
 }
   
-.example-sidenav {
+.sidenav {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 200px;
+    width: 320px;
 }
   
-.example-header {
+.header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
 }
   
-.example-footer {
+.footer {
     position: fixed;
     bottom: 0;
     left: 0;
