--- a/src/app/containers/app/app.component.scss
+++ b/src/app/containers/app/app.component.scss
@@ -30,3 +30,17 @@ mat-sidenav {
     left: 0;
     right: 0;
 }
+
+.main {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 16px;
+}
+
+.notice {
+    text-align: center;
+}
+
+.share {
+    padding: 8px;
+}
