--- a/src/app/containers/app/app.component.html
+++ b/src/app/containers/app/app.component.html
@@ -1,19 +1,56 @@
 <mat-toolbar class="header">
-    <button mat-icon-button (click)="sidenav.toggle()">
+    <button *ngIf="isSmall$ | async" mat-icon-button (click)="sidenav.toggle()">
         <mat-icon class="fa fa-bars fa-2x"></mat-icon>
     </button>
-    <h2 class="mat-headline">{{(watchTime$ | async) | duration}}</h2>
+    <h2 *ngIf="(watchTime$ | async) > 0" class="mat-headline"><strong>{{(watchTime$ | async) | duration}}</strong> of catch-up</h2>
+    <h2 *ngIf="(watchTime$ | async) === 0" class="mat-headline">Catch-up</h2>
 </mat-toolbar>
 <mat-sidenav-container class="container">
-    <mat-sidenav #sidenav class="sidenav" [mode]="mode" [fixedInViewport]="'true'" [fixedTopGap]="'60'" fxLayout="column" fxLayoutAlign="stretch">
-        <mat-list fxFlex>
-            <mat-list-item *ngFor="let entry of entries$ | async">
-                <h4 matLine>{{entry.show.name}}</h4>
-                <span matLine>{{entry.episode.name}}</span>
-            </mat-list-item>
-        </mat-list>
+    <mat-sidenav
+        class="sidenav"
+        [opened]="openOnInit"
+        [mode]="mode"
+        [fixedInViewport]="'true'"
+        [fixedTopGap]="'60'"
+        fxLayout="column"
+        fxLayoutAlign="stretch"
+        #sidenav>
+        <div *ngIf="!!(entries$ | async).length" fxLayout="column" fxFlex>
+            <mat-list>
+                <mat-list-item *ngFor="let entry of entries$ | async">
+                    <h4 matLine>{{entry.show.name}}</h4>
+                    <span matLine>{{entry.episode.name}}</span>
+                    <button mat-icon-button (click)="removeEpisode(entry.episode.id)">
+                        <mat-icon class="fa fa-remove"></mat-icon>
+                    </button>
+                </mat-list-item>
+            </mat-list>
+            <div fxFlex></div>
+            <div class="share">
+                <div class="mat-typography">Share</div>
+                <div>
+                    <button mat-icon-button>
+                        <mat-icon class="fa fa-envelope fa-2x"></mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon class="fa fa-facebook fa-2x"></mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon class="fa fa-twitter fa-2x"></mat-icon>
+                    </button>
+                    <button mat-icon-button>
+                        <mat-icon class="fa fa-google-plus fa-2x"></mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div fxFlex *ngIf="!(entries$ | async).length" fxLayout="column" fxLayoutAlign="center center">
+            <div class="mat-subheading-2 notice">Add episodes to your catch-up list</div>
+        </div>
     </mat-sidenav>
     <mat-sidenav-content>
-        <router-outlet></router-outlet>
+        <div class="main">
+            <router-outlet></router-outlet>
+        </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
